--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.example.lofiapp'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.lofiapp"
@@ -55,6 +55,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.2.0'
     implementation 'com.google.firebase:firebase-crashlytics-buildtools:2.8.1'
+    implementation 'androidx.compose.foundation:foundation-android:+'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -71,5 +72,10 @@ dependencies {
 
     // Thumbnail Implementation
     implementation "io.coil-kt:coil-compose:2.4.0"
+
+    // Reorder Implementation
+    dependencies {
+        implementation('org.burnoutcrew.composereorderable:reorderable:0.9.6')
+    }
 
 }
